--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		  <!-- Redes sociales centradas -->
 		  <div class="widget-body" style="display: flex; justify-content: center; margin-top: 20px;">
 			<p class="follow-me-icons">
-			  <a href="#"><i class="fa-regular fa-envelope" style="color: #ffffff; font-size: 20px; width: 20px; height: 20px; padding: 15px;"></i></a>
+			  <a href="mailto:holasoykidf@gmail.com"><i class="fa-regular fa-envelope" style="color: #ffffff; font-size: 20px; width: 20px; height: 20px; padding: 15px;"></i></a>
 			  <a href="https://www.tiktok.com/@elytonix"><i class="fab fa-tiktok" style="color: #ffffff; font-size: 20px; width: 20px; height: 20px; padding: 15px;"></i></a>
 			  <a href="https://www.instagram.com/elytonix/"><i class="fab fa-instagram" style="color: #ffffff; font-size: 20px; width: 20px; height: 20px; padding: 15px;"></i></a>
 			  <a href="https://x.com/elytonix?s=21"><i class="fa-brands fa-x-twitter" style="color: #ffffff; font-size: 20px; width: 20px; height: 20px; padding: 15px;"></i></a>
