--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 		<div id="head" class="parallax" parallax-speed="1">
 		  <h1 id="logo" class="text-center">
 			<img class="img-circle" src="assets/images/img1.png" alt="">
-			<span class="tagline" style="color: white; font-size: 21px;">ElyTonix</span>
+			<span class="tagline" style="color: white; font-size: 21px; text-align: center;">ElyTonix</span>
 		  </h1>
 	  
 		  <!-- Redes sociales centradas -->
-		  <div class="widget-body" style="display: flex; justify-content: center; margin-top: 20px;">
+		  <div class="widget-body" style="display: flex; justify-content: center;">
 			<p class="follow-me-icons">
 			  <a href="mailto:holasoykidf@gmail.com"><i class="fa-regular fa-envelope" style="color: #ffffff; font-size: 20px; width: 20px; height: 20px; padding: 15px;"></i></a>
 			  <a href="https://www.tiktok.com/@elytonix"><i class="fab fa-tiktok" style="color: #ffffff; font-size: 20px; width: 20px; height: 20px; padding: 15px;"></i></a>
