--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 	  
 		  <!-- Redes sociales centradas -->
 		  <div class="widget-body" style="display: flex; justify-content: center;">
-			<p class="follow-me-icons">
+			<span class="follow-me-icons">
 			  <a href="mailto:holasoykidf@gmail.com"><i class="fa-regular fa-envelope" style="color: #ffffff; font-size: 20px; width: 20px; height: 20px; padding: 15px;"></i></a>
 			  <a href="https://www.tiktok.com/@elytonix"><i class="fab fa-tiktok" style="color: #ffffff; font-size: 20px; width: 20px; height: 20px; padding: 15px;"></i></a>
 			  <a href="https://www.instagram.com/elytonix/"><i class="fab fa-instagram" style="color: #ffffff; font-size: 20px; width: 20px; height: 20px; padding: 15px;"></i></a>
 			  <a href="https://x.com/elytonix?s=21"><i class="fa-brands fa-x-twitter" style="color: #ffffff; font-size: 20px; width: 20px; height: 20px; padding: 15px;"></i></a>
-			</p>
+			</span>
 		  </div>
 	  
 		  <div class="textos" style="text-align: center;">
